analizador/generated/tableroParser.js
// Generated from c:/Users/terep/ssl-antlr-calculator/tablero.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import tableroListener from './tableroListener.js';
import tableroVisitor from './tableroVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class tableroParser extends antlr4.Parser {

    static grammarFileName = "tablero.g4";
    static literalNames = [ null, "'tablero'", "'{'", "'}'", "'fuente'", 
                            "'tipo'", "'ruta'", "';'", "'csv'", "'api'", 
                            "'json'", "'metrica'", "'='", "'('", "')'", 
                            "'suma'", "'promedio'", "'maximo'", "'minimo'", 
                            "'contar'", "'grafico'", "'usar'", "'barras'", 
                            "'lineas'", "'torta'", "'tabla'", "'filtro'", 
                            "'alerta'", "'si'", "'entonces'", "'.'", "'=='", 
                            "'!='", "'>'", "'<'", "'>='", "'<='" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, "BOOLEANO", "IDENTIFICADOR", 
                             "CADENA", "NUMERO", "WS" ];
    static ruleNames = [ "programa", "elemento", "fuente", "tipo_fuente", 
                         "metrica", "agregacion", "grafico", "tipo_grafico", 
                         "filtro", "alerta", "campo", "valor", "operador" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = tableroParser.ruleNames;
        this.literalNames = tableroParser.literalNames;
        this.symbolicNames = tableroParser.symbolicNames;
    }



	programa() {
	    let localctx = new ProgramaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, tableroParser.RULE_programa);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 26;
	        this.match(tableroParser.T__0);
	        this.state = 27;
	        this.match(tableroParser.IDENTIFICADOR);
	        this.state = 28;
	        this.match(tableroParser.T__1);
	        this.state = 32;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 202377232) !== 0)) {
	            this.state = 29;
	            this.elemento();
	            this.state = 34;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 35;
	        this.match(tableroParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elemento() {
	    let localctx = new ElementoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, tableroParser.RULE_elemento);
	    try {
	        this.state = 42;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 4:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 37;
	            this.fuente();
	            break;
	        case 11:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 38;
	            this.metrica();
	            break;
	        case 20:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 39;
	            this.grafico();
	            break;
	        case 26:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 40;
	            this.filtro();
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 41;
	            this.alerta();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fuente() {
	    let localctx = new FuenteContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, tableroParser.RULE_fuente);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 44;
	        this.match(tableroParser.T__3);
	        this.state = 45;
	        this.match(tableroParser.IDENTIFICADOR);
	        this.state = 46;
	        this.match(tableroParser.T__4);
	        this.state = 47;
	        this.tipo_fuente();
	        this.state = 48;
	        this.match(tableroParser.T__5);
	        this.state = 49;
	        this.match(tableroParser.CADENA);
	        this.state = 50;
	        this.match(tableroParser.T__6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tipo_fuente() {
	    let localctx = new Tipo_fuenteContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, tableroParser.RULE_tipo_fuente);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1792) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	metrica() {
	    let localctx = new MetricaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, tableroParser.RULE_metrica);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 54;
	        this.match(tableroParser.T__10);
	        this.state = 55;
	        this.match(tableroParser.IDENTIFICADOR);
	        this.state = 56;
	        this.match(tableroParser.T__11);
	        this.state = 57;
	        this.agregacion();
	        this.state = 58;
	        this.match(tableroParser.T__12);
	        this.state = 59;
	        this.campo();
	        this.state = 60;
	        this.match(tableroParser.T__13);
	        this.state = 61;
	        this.match(tableroParser.T__6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	agregacion() {
	    let localctx = new AgregacionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, tableroParser.RULE_agregacion);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 63;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1015808) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	grafico() {
	    let localctx = new GraficoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, tableroParser.RULE_grafico);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 65;
	        this.match(tableroParser.T__19);
	        this.state = 66;
	        this.match(tableroParser.IDENTIFICADOR);
	        this.state = 67;
	        this.match(tableroParser.T__1);
	        this.state = 68;
	        this.match(tableroParser.T__4);
	        this.state = 69;
	        this.match(tableroParser.T__11);
	        this.state = 70;
	        this.tipo_grafico();
	        this.state = 71;
	        this.match(tableroParser.T__6);
	        this.state = 72;
	        this.match(tableroParser.T__20);
	        this.state = 73;
	        this.match(tableroParser.T__11);
	        this.state = 74;
	        this.match(tableroParser.IDENTIFICADOR);
	        this.state = 75;
	        this.match(tableroParser.T__6);
	        this.state = 76;
	        this.match(tableroParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tipo_grafico() {
	    let localctx = new Tipo_graficoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, tableroParser.RULE_tipo_grafico);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 78;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 62914560) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	filtro() {
	    let localctx = new FiltroContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, tableroParser.RULE_filtro);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 80;
	        this.match(tableroParser.T__25);
	        this.state = 81;
	        this.campo();
	        this.state = 82;
	        this.operador();
	        this.state = 83;
	        this.valor();
	        this.state = 84;
	        this.match(tableroParser.T__6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	alerta() {
	    let localctx = new AlertaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, tableroParser.RULE_alerta);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 86;
	        this.match(tableroParser.T__26);
	        this.state = 87;
	        this.match(tableroParser.T__27);
	        this.state = 88;
	        this.match(tableroParser.IDENTIFICADOR);
	        this.state = 89;
	        this.operador();
	        this.state = 90;
	        this.valor();
	        this.state = 91;
	        this.match(tableroParser.T__28);
	        this.state = 92;
	        this.match(tableroParser.CADENA);
	        this.state = 93;
	        this.match(tableroParser.T__6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	campo() {
	    let localctx = new CampoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, tableroParser.RULE_campo);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        this.match(tableroParser.IDENTIFICADOR);
	        this.state = 100;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===30) {
	            this.state = 96;
	            this.match(tableroParser.T__29);
	            this.state = 97;
	            this.match(tableroParser.IDENTIFICADOR);
	            this.state = 102;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	valor() {
	    let localctx = new ValorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, tableroParser.RULE_valor);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 103;
	        _la = this._input.LA(1);
	        if(!(((((_la - 37)) & ~0x1f) === 0 && ((1 << (_la - 37)) & 13) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	operador() {
	    let localctx = new OperadorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, tableroParser.RULE_operador);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        _la = this._input.LA(1);
	        if(!(((((_la - 31)) & ~0x1f) === 0 && ((1 << (_la - 31)) & 63) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

tableroParser.EOF = antlr4.Token.EOF;
tableroParser.T__0 = 1;
tableroParser.T__1 = 2;
tableroParser.T__2 = 3;
tableroParser.T__3 = 4;
tableroParser.T__4 = 5;
tableroParser.T__5 = 6;
tableroParser.T__6 = 7;
tableroParser.T__7 = 8;
tableroParser.T__8 = 9;
tableroParser.T__9 = 10;
tableroParser.T__10 = 11;
tableroParser.T__11 = 12;
tableroParser.T__12 = 13;
tableroParser.T__13 = 14;
tableroParser.T__14 = 15;
tableroParser.T__15 = 16;
tableroParser.T__16 = 17;
tableroParser.T__17 = 18;
tableroParser.T__18 = 19;
tableroParser.T__19 = 20;
tableroParser.T__20 = 21;
tableroParser.T__21 = 22;
tableroParser.T__22 = 23;
tableroParser.T__23 = 24;
tableroParser.T__24 = 25;
tableroParser.T__25 = 26;
tableroParser.T__26 = 27;
tableroParser.T__27 = 28;
tableroParser.T__28 = 29;
tableroParser.T__29 = 30;
tableroParser.T__30 = 31;
tableroParser.T__31 = 32;
tableroParser.T__32 = 33;
tableroParser.T__33 = 34;
tableroParser.T__34 = 35;
tableroParser.T__35 = 36;
tableroParser.BOOLEANO = 37;
tableroParser.IDENTIFICADOR = 38;
tableroParser.CADENA = 39;
tableroParser.NUMERO = 40;
tableroParser.WS = 41;

tableroParser.RULE_programa = 0;
tableroParser.RULE_elemento = 1;
tableroParser.RULE_fuente = 2;
tableroParser.RULE_tipo_fuente = 3;
tableroParser.RULE_metrica = 4;
tableroParser.RULE_agregacion = 5;
tableroParser.RULE_grafico = 6;
tableroParser.RULE_tipo_grafico = 7;
tableroParser.RULE_filtro = 8;
tableroParser.RULE_alerta = 9;
tableroParser.RULE_campo = 10;
tableroParser.RULE_valor = 11;
tableroParser.RULE_operador = 12;

class ProgramaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_programa;
    }

	IDENTIFICADOR() {
	    return this.getToken(tableroParser.IDENTIFICADOR, 0);
	};

	elemento = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ElementoContext);
	    } else {
	        return this.getTypedRuleContext(ElementoContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterPrograma(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitPrograma(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitPrograma(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ElementoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_elemento;
    }

	fuente() {
	    return this.getTypedRuleContext(FuenteContext,0);
	};

	metrica() {
	    return this.getTypedRuleContext(MetricaContext,0);
	};

	grafico() {
	    return this.getTypedRuleContext(GraficoContext,0);
	};

	filtro() {
	    return this.getTypedRuleContext(FiltroContext,0);
	};

	alerta() {
	    return this.getTypedRuleContext(AlertaContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterElemento(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitElemento(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitElemento(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FuenteContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_fuente;
    }

	IDENTIFICADOR() {
	    return this.getToken(tableroParser.IDENTIFICADOR, 0);
	};

	tipo_fuente() {
	    return this.getTypedRuleContext(Tipo_fuenteContext,0);
	};

	CADENA() {
	    return this.getToken(tableroParser.CADENA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterFuente(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitFuente(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitFuente(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Tipo_fuenteContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_tipo_fuente;
    }


	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterTipo_fuente(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitTipo_fuente(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitTipo_fuente(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class MetricaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_metrica;
    }

	IDENTIFICADOR() {
	    return this.getToken(tableroParser.IDENTIFICADOR, 0);
	};

	agregacion() {
	    return this.getTypedRuleContext(AgregacionContext,0);
	};

	campo() {
	    return this.getTypedRuleContext(CampoContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterMetrica(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitMetrica(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitMetrica(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AgregacionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_agregacion;
    }


	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterAgregacion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitAgregacion(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitAgregacion(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class GraficoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_grafico;
    }

	IDENTIFICADOR = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(tableroParser.IDENTIFICADOR);
	    } else {
	        return this.getToken(tableroParser.IDENTIFICADOR, i);
	    }
	};


	tipo_grafico() {
	    return this.getTypedRuleContext(Tipo_graficoContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterGrafico(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitGrafico(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitGrafico(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Tipo_graficoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_tipo_grafico;
    }


	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterTipo_grafico(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitTipo_grafico(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitTipo_grafico(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FiltroContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_filtro;
    }

	campo() {
	    return this.getTypedRuleContext(CampoContext,0);
	};

	operador() {
	    return this.getTypedRuleContext(OperadorContext,0);
	};

	valor() {
	    return this.getTypedRuleContext(ValorContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterFiltro(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitFiltro(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitFiltro(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AlertaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_alerta;
    }

	IDENTIFICADOR() {
	    return this.getToken(tableroParser.IDENTIFICADOR, 0);
	};

	operador() {
	    return this.getTypedRuleContext(OperadorContext,0);
	};

	valor() {
	    return this.getTypedRuleContext(ValorContext,0);
	};

	CADENA() {
	    return this.getToken(tableroParser.CADENA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterAlerta(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitAlerta(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitAlerta(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class CampoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_campo;
    }

	IDENTIFICADOR = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(tableroParser.IDENTIFICADOR);
	    } else {
	        return this.getToken(tableroParser.IDENTIFICADOR, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterCampo(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitCampo(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitCampo(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ValorContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_valor;
    }

	CADENA() {
	    return this.getToken(tableroParser.CADENA, 0);
	};

	NUMERO() {
	    return this.getToken(tableroParser.NUMERO, 0);
	};

	BOOLEANO() {
	    return this.getToken(tableroParser.BOOLEANO, 0);
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterValor(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitValor(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitValor(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class OperadorContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_operador;
    }


	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterOperador(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitOperador(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitOperador(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}




tableroParser.ProgramaContext = ProgramaContext; 
tableroParser.ElementoContext = ElementoContext; 
tableroParser.FuenteContext = FuenteContext; 
tableroParser.Tipo_fuenteContext = Tipo_fuenteContext; 
tableroParser.MetricaContext = MetricaContext; 
tableroParser.AgregacionContext = AgregacionContext; 
tableroParser.GraficoContext = GraficoContext; 
tableroParser.Tipo_graficoContext = Tipo_graficoContext; 
tableroParser.FiltroContext = FiltroContext; 
tableroParser.AlertaContext = AlertaContext; 
tableroParser.CampoContext = CampoContext; 
tableroParser.ValorContext = ValorContext; 
tableroParser.OperadorContext = OperadorContext; 
